--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_API_URL = http://localhost:3000/api
-DEV_TO_API_KEY = your-api-key
+DEV_TO_API_KEY = tH2DBFmDVTx6W3zmkGP8G3BK
 GITHUB_API_KEY = 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
 NEXT_PUBLIC_GITHUB_USERNAME = OnishellT
 NOTION_API_TOKEN = secret_4TVrLvBttPf3NdKvpaqg0y9Tx3HniAnyqaJDgEXHvoo
